style.css
* {
    box-sizing: border-box;
}

img {
    height: auto;
    width: max-width;
}

.carrousel_parent-ecrans {
    display: flex;
    width: 100%;
    overflow-x: scroll;
    scroll-behavior: smooth;
    scroll-snap-type: x mandatory;
    border-radius: 20px;
}

.carrousel_ecran {
    flex: none;
    width: 100%;
    scroll-snap-align: start;
}

.carrousel-ecran figure {
    margin: 0;
}

.carrousel {
    position: relative;
}

.carrousel_btn {
    position: absolute;
    top: 50%;
    /* centre verticalement */
    transform: translateY(-50%);
    /* methode du point mort */
    width: 2rem;
    height: 2rem;
    background: rgba(0, 0, 0, 0.5);
    border-radius: 50%;
    border: none;
    display: grid;
    place-content: center;
    color: #fff;
    cursor: pointer;
}

.carrousel_btn-avant {
    left: 0;
}

.carrousel_btn-apres {
    right: 0;
}

.caroussel_liste-liens {
    display: flex;
    justify-content: center;
    margin: 0;
    padding: 0;
    list-style: none;
    gap: 1rem;
}

/* CSS de pure décoration, hors TP */

@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&display=swap');

a, figcaption {
    text-decoration: none;
    font-family: Roboto Mono, monospace;
}

figcaption {
    color: #2d334a;
}

.caroussel_lien {
    background-color: #ececec;
    color: #272343;
    border-radius: 10px;
    padding: 0.5rem;
}

a:hover {
    background-color: #e1bf00;
    transition: .25s;
}

.caroussel_lien.actif {
    background-color: #ffd803;
}

body {
    background-color: #fffffe;
}

